--- a/package.json
+++ b/package.json
@@ -2,21 +2,39 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jsbsmp.github.io/react-js-way-of-the-samurai-1.0",
   "dependencies": {
     "@testing-library/dom": "10.4.1",
-    "@testing-library/jest-dom": "6.8.0",
     "@testing-library/react": "16.3.0",
     "@testing-library/user-event": "13.5.0",
+    "@types/jest": "30.0.0",
+    "@types/node": "25.0.3",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
+    "@types/redux-form": "8.3.11",
+    "antd": "6.1.2",
+    "axios": "1.12.2",
+    "classnames": "2.5.1",
+    "formik": "2.4.9",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-redux": "9.2.0",
+    "react-router-dom": "7.9.4",
     "react-scripts": "5.0.1",
+    "redux": "5.0.1",
+    "redux-form": "8.3.10",
+    "redux-thunk": "3.1.0",
+    "reselect": "5.1.1",
+    "typescript": "5.9.3",
     "web-vitals": "2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -35,5 +53,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!axios|react-router-dom)/"
+    ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "6.9.1",
+    "baseline-browser-mapping": "2.8.32",
+    "gh-pages": "6.3.0",
+    "react-test-renderer": "19.2.1",
+    "remote-redux-devtools": "0.5.0"
   }
 }
